--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@ html, body{
 	margin: 0%;
 	padding:0%;
 	width: 100%;
+	height: 100%;
+
 }
 
 body{
 	display: flex;
 	background-color: #d6d4e0;
+	flex-direction: column;
+
 }
 
 h1{
@@ -81,7 +85,7 @@ button{
 }
 
 
-button:active {
+button:active, .active {
   background-color: #622569;
   box-shadow: 10px 10px 5px grey;
   transform: translateY(4px);
@@ -158,9 +162,12 @@ input:checked + .slider:before {
 #display{
 	background-color: #d6d4e0;
 	width: 250px;
+	height: 60px;
 	text-align: center;
 	align-self: center;
-
+	line-height: 60px;
+	font-style: italic;
+	font-weight: bold;
 }
 
 #volume{
@@ -170,5 +177,11 @@ input:checked + .slider:before {
 
 h3{
 	margin: 0;	
+}
+
+#footer{
+	text-align: center;
+	margin-bottom: 50px;
+	
 }
 
